# NuRaft-Forensics

./: .gitignore  CMakeLists.txt  README.md  manifest.sh  prepare.sh
client/: 1.ppk  2.ppk  3.ppk  4.ppk  5.ppk  CMakeLists.txt  README.md  commander.cxx  commander.hxx  config.json  d_raft_byzantine_controller.cxx  d_raft_byzantine_controller.hxx  d_raft_client.cxx  d_raft_launcher.cxx  d_raft_launcher_clientless.cxx  d_raft_scheduler.cxx  d_raft_scheduler.hxx  d_raft_server.cxx  d_raft_state_machine.hxx  in_memory_log_store.cxx  job_queue.cxx  job_queue.hxx  logger.cc  main.cxx  naive.json  raft_client.cxx  req_socket_mgr.cxx  req_socket_mgr.hxx  server_data_mgr.cxx  server_data_mgr.hxx  socket_mgr.hxx  sync_file_obj.hxx  utils.cxx  utils.hxx  workload.cxx  workload.hxx  workload.json
client/unused/: d_raft_launcher.cxx  d_raft_scheduler.hxx  raft_client.hxx
docs/: bench_results.md
examples/: CMakeLists.txt  argparse.cxx  argparse.hxx  backtrace.h  example_common.hxx  in_memory_log_store.cxx  in_memory_log_store.hxx  in_memory_state_mgr.hxx  logger.cc  logger.h  logger_wrapper.hxx  mock_cli.cxx  quick_start.cxx
examples/calculator/: calc_server.cxx  calc_state_machine.hxx
examples/echo/: echo_server.cxx  echo_state_machine.hxx
examples/raft_client/: raft_client.cxx
include/libnuraft/: asio_service.hxx  asio_service_options.hxx  async.hxx  buffer.hxx  buffer_serializer.hxx  callback.hxx  certificate.hxx  cluster_config.hxx  context.hxx  delayed_task.hxx  delayed_task_scheduler.hxx  fault_controller.hxx  fault_types.hxx  global_mgr.hxx  internal_timer.hxx  key.hxx  launcher.hxx  log_entry.hxx  log_store.hxx  log_val_type.hxx  logger.hxx  msg_base.hxx  msg_type.hxx  nuraft.hxx  peer.hxx  pp_util.hxx  ptr.hxx  raft_params.hxx  raft_server.hxx  raft_server_handler.hxx  req_msg.hxx  resp_msg.hxx  rpc_cli.hxx  rpc_cli_factory.hxx  rpc_exception.hxx  rpc_listener.hxx  snapshot.hxx  snapshot_sync_ctx.hxx  snapshot_sync_req.hxx  srv_config.hxx  (+7 more)
scripts/benchmark/: bench.sh  check-port.sh  debug_clientless.sh  experiment.sh  experiment_clientless.sh  experiment_orig.sh  summary.py
scripts/forensics/: commit_cert.py  election_list.py  leader_signatures.py  log_entries.py
scripts/test/: lcov_cobertura.py
src/: asio_service.cxx  buffer.cxx  buffer_serializer.cxx  cluster_config.cxx  crc32.cxx  cryptopp_ecdsa.cxx  cryptopp_ecdsa.hxx  election_list.cxx  event_awaiter.h  fault_controller.cxx  fix_format.hxx  global_mgr.cxx  handle_append_entries.cxx  handle_client_request.cxx  handle_client_request.hxx  handle_commit.cxx  handle_custom_notification.cxx  handle_custom_notification.hxx  handle_join_leave.cxx  handle_priority.cxx  handle_snapshot_sync.cxx  handle_timeout.cxx  handle_user_cmd.cxx  handle_vote.cxx  launcher.cxx  leader_certificate.cxx  leader_certificate.hxx  openssl_ecdsa.cxx  openssl_ecdsa.hxx  peer.cxx  raft_server.cxx  snapshot.cxx  snapshot_sync_ctx.cxx  snapshot_sync_req.cxx  srv_config.cxx  stat_mgr.cxx  tracer.hxx
tests/: CMakeLists.txt  test_common.h
tests/bench/: ashared_ptr.h  async_worker.hxx  latency_collector.h  latency_dump.h  raft_bench.cxx
tests/forensics_test/: nodes_down_test.sh  raft_forensics_bench.cxx  split_brain_test.cxx  split_brain_test.sh
tests/forensics_test/attack_utils/: mal_raft_server.cxx  mal_raft_server.hxx
tests/unit/: asio_service_test.cxx  buffer_test.cxx  failure_test.cxx  fake_network.cxx  fake_network.hxx  raft_functional_common.hxx  raft_package_asio.hxx  raft_package_fake.hxx  raft_server_test.cxx  serialization_test.cxx  stat_mgr_test.cxx  strfmt_test.cxx  timer_test.cxx
