add_executable(raft_client
               main.cxx
               raft_client.cxx
               in_memory_log_store.cxx)
add_dependencies(raft_client
                 static_lib)
target_link_libraries(raft_client
                      ${BUILD_DIR}/${LIBRARY_OUTPUT_NAME}
                      ${LIBRARIES})